--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "ts-node src/index.ts",
     "interactive": "ts-node src/interactive.ts",
     "customer-service": "ts-node src/interactive.ts",
+    "web": "ts-node src/server.ts",
+    "web:build": "tsc && node dist/server.js",
     "test": "jest"
   },
   "keywords": [
@@ -24,12 +26,16 @@
     "@langchain/openai": "^0.5.18",
     "@stripe/agent-toolkit": "^0.1.21",
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.21.2",
     "langchain": "^0.3.29",
     "openai": "^4.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "jest": "^29.0.0",
