--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.2",
     "langchain": "^0.3.29",
     "openai": "^4.0.0",
+    "stripe": "^18.3.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
